--- a/cui.html
+++ b/cui.html
@@ -44,43 +44,46 @@
       <div class="casestudy-content">
         <div class="casestudy-component" id="costar-background">
           <div class="component-left">
-            <h2><span class="h2-unbold">⦿</span> Overview</h2>
+            <h3>OVERVIEW</h3>
             <p>
               As part of my Human-Computer Interaction studio class, our assignment was to design a conversational agent for our giving domain: hospitality. My primary responsibility was leading the ideation process for the agent and carefully considering the user experience throughout the design.            
             </p>
           </div>
           <div class="component-right">
-            <h2><span class="h2-unbold">⦿</span> Background</h2>
+            <h3>BACKGROUND</h3>
             
             <p class="component-text">Team: Michael Auld, Charlene Chen, and Yueer Tang</p>
             <p class="component-text">Timeline: February 2023 - March 2023</p>
-            <p class="component-text">Goal:<span class="zoo-bold-color"> Create a conversational agent that supports various types of interactions</span></p>
+            <p class="component-text">Goal:<span class="cui-bold-color"> Create a conversational agent that supports various types of interactions</span></p>
           </div>
         </div>
 
         <div class="casestudy-component">
-          <h2><span class="h2-unbold">⦿</span> Narrowing our domain</h2>
+          <h3>NARROWING OUR DOMAIN</h3>
+
           <p class="component-text component-header">Conducted secondary research within 4 subdomains of hospitality to identify the ideal ecosystem for our problem</p>
           <p class="component-text">
             We conducted research in 4 subdomains: (1) Restaurants (2) Hotels (3) Resorts (4) Concerts      
-
+            <br><br>
             <img src="images/cui-domain.png" class="img-center full-size" alt="Conversational Agent Case Study">
+            <br><br>
+
             We decided to narrow our scope down to the hotel industry, because we identified a problem that we felt could be solved by the characteristics of a conversational agent: <span class="bold">87% of hotels experience staffing shortages, leading to increase strain and decreased service</span>. This lead us to our overarching question:
-            <br>
             <span class="cui-bold-color">How do we give hotel guests an elevated experience without increasing work load for employees?</span>
           </p>
         </div>
 
         <div class="casestudy-component">
-          <h2><span class="h2-unbold">⦿</span> Stepping into the shoes our of user(s)</h2>
+          <h3>STEPPING INTO THE SHOES OF OUR USER(S)</h3>
 
           <p class="component-text component-header">Modeled a stakeholder and customer journey map map to understand how different actors interacted within the hotel ecosystem
+            <br><br>
             <img src="images/cui-models.png" class="img-center full-size" alt="Conversational Agent Case Study">
           </p>
         </div>
 
         <div class="casestudy-component">
-          <h2><span class="h2-unbold">⦿</span> Leveraging the strengths of a conversational agent</h2>
+          <h3>LEVERAGING THE STRENGTHS OF A CONVERSATIONAL AGENT</h3>
 
           <p class="component-text component-header">Conversational agents can streamline requests and leverage conversational principles to nudge guests
           </p>
@@ -104,12 +107,13 @@
             </ul>
 
             An example of this is:
+            <br><br>
             <img src="images/cui-nudge.png" class="img-center full-size" alt="Conversational Agent Case Study">
           </p>     
         </div>
 
         <div class="casestudy-component">
-          <h2><span class="h2-unbold">⦿</span> Keeping the user in control</h2>
+          <h3>KEEPING THE USER IN CONTROL</h3>
 
           <p class="component-text component-header">Created a “key lock” system to address the issue of privacy and keep the user in control </p>
 
@@ -123,7 +127,7 @@
         </div>
 
         <div class="casestudy-component">
-          <h2><span class="h2-unbold">⦿</span> Bringing Archie alive</h2>
+          <h3>BRINGING ARCHIE ALIVE</h3>
 
           <p class="component-text component-header">Incorporating humor as a mechanism to humanize our conversational agent and increase the comfortability for the user</p>
 
@@ -134,7 +138,7 @@
         </div>
 
         <div class="casestudy-component">
-          <h2><span class="h2-unbold">⦿</span> Final conversational agent</h2>
+          <h3>FINAL CONVERSATIONAL AGENT</h3>
 
           <p class="component-text">Click on me to start a conversation!</p>
           <a href="https://creator.voiceflow.com/prototype/641a33e295505bd608664480"><img id="archie" src="images/cui-archie.png" class="img-center" alt="Conversational Agent Case Study"></a>
